Fixed overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,11 +28,11 @@ body {
     /* Grid properties */
     display: flex;
     flex-direction: column;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     justify-content: space-between;
 
     min-height: 100vh;
-    max-height: 100vh;
+    height: 100vh;
     min-width: 100vw;
     max-width: 100vw;
 }
